# bb_band_strategy

./: .gitignore  Cargo.toml  README.md
src/: backtest.rs  consts.rs  hypertune.rs  lib.rs  main.rs  mongo_client.rs  strategy.rs  types.rs  utils.rs
src/strategy_pool/: mod.rs
src/strategy_pool/bb_swing/: mod.rs
