[package]
name = "bb_band"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
chrono = "0.4.23"
futures = "0.3"
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
