[package]
name = "bb_band"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
log = "0.4.0"
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.90"
simple_logger = "4.0.0"

